Fixing layout issues.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,9 +110,8 @@ input, select, textarea {
 		display: grid;
 		margin: 0;
     	height: 100%;
-		grid-gap: 10px;
 		grid-template-columns: 1fr;
-		grid-template-rows: 120px 1fr 120px;
+		grid-template-rows: 110px 1fr 150px;
 		grid-template-areas: "header" "main" "footer";
 	}
 
